--- a/.github/workflows/2-step.yml
+++ b/.github/workflows/2-step.yml
@@ -24,6 +24,8 @@ jobs:
     needs: [find_exercise]
     env:
       ISSUE_URL: ${{ needs.find_exercise.outputs.issue-url }}
+      ISSUE_NUMBER: ${{ needs.find_exercise.outputs.issue-number }}
+      ISSUE_REPOSITORY: ${{ github.repository }}
 
     steps:
       - name: Checkout
@@ -68,34 +70,38 @@ jobs:
           text-file: .github/workflows/welcome.yml
           keyphrase: "runs-on: ubuntu-latest"
 
-      - name: Build message - step results
-        id: build-message-step-results
-        run: echo "updated-text=### Step Results<br>Automated checks completed." >> "$GITHUB_OUTPUT"
-
-      - name: Create comment - step results
-        run: |
-          gh issue comment "$ISSUE_URL" \
-            --body "$COMMENT_BODY" \
-            --edit-last
-        env:
-          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          COMMENT_BODY: ${{ steps.build-message-step-results.outputs.updated-text }}
+      - name: Update comment - step results
+        uses: GrantBirki/comment@v2.1.1
+        with:
+          repository: ${{ env.ISSUE_REPOSITORY }}
+          issue-number: ${{ env.ISSUE_NUMBER }}
+          comment-id: ${{ steps.find-last-comment.outputs.comment-id }}
+          edit-mode: replace
+          file: exercise-toolkit/markdown-templates/step-feedback/step-results-table.md
+          vars: |
+            step_number: 2
+            results_table:
+              - description: "Added jobs section to workflow file"
+                passed: ${{ steps.check-jobs-section.outcome == 'success' }}
+              - description: "Created welcome job"
+                passed: ${{ steps.check-welcome-job.outcome == 'success' }}
+              - description: "Set runs-on to ubuntu-latest"
+                passed: ${{ steps.check-runs-on.outcome == 'success' }}
 
       - name: Fail job if not all checks passed
         if: contains(steps.*.outcome, 'failure')
         run: exit 1
 
-      - name: Build message - step finished
-        id: build-message-step-finish
-        run: echo "updated-text=### Step Finished<br>Proceeding to next step." >> "$GITHUB_OUTPUT"
-
       - name: Update comment - step finished
-        run: |
-          gh issue comment "$ISSUE_URL" \
-            --body "$ISSUE_BODY"
-        env:
-          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          ISSUE_BODY: ${{ steps.build-message-step-finish.outputs.updated-text }}
+        uses: GrantBirki/comment@v2.1.1
+        with:
+          repository: ${{ env.ISSUE_REPOSITORY }}
+          issue-number: ${{ env.ISSUE_NUMBER }}
+          comment-id: ${{ steps.find-last-comment.outputs.comment-id }}
+          edit-mode: replace
+          file: exercise-toolkit/markdown-templates/step-feedback/step-finished-prepare-next-step.md
+          vars: |
+            next_step_number: "3"
 
   post_next_step_content:
     name: Post next step content
